--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="twitter:card" content="summary">
     <meta
       property="og:url"
-      content="https://あなたのユーザ名.github.io/assessment/assessment.html"
+      content="https://luckyearth.github.io/assessment/"
     >
     <meta property="og:title" content="あなたのいいところ診断">
     <meta
